[text] improve output and formatting